[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bypasstools"
version = "1.0.2"
description = "Official Python SDK for the BypassTools API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []
keywords = ["bypasstools", "bypass", "linkvertise", "api"]
authors = [
    { name = "BypassTools", email = "support@bypass.tools" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://bypass.tools"
Repository = "https://github.com/XxEASTRxX/bypasstools-sdks-python.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["bypasstools*"]
